--- a/src/index.css
+++ b/src/index.css
@@ -9,49 +9,69 @@
 
 li {
     list-style: none;
-    padding-right: 25px;
-    border: 1px solid black;
 }
 
 a {
     text-decoration: none;
 }
 
-.parrafo-negrita {
-    font-weight:900;
-}
-.parrafo-cursiva{
-    
+.navegacion {
+    height: 90px;
+    font-size: 27px;
 }
 
-.navegacion {
-    border: 1px solid blue;
+.fixieClass {
+    background-color: rgb(222, 229, 238);
+    display: flex;
+    justify-content: space-evenly;
+    position: fixed;
+    width: 100vw;
 }
 
 .navBarUl {
     display: flex;
-    justify-content: space-between;
-    border: 1px solid red;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
 
-.navBarUl>li:hover {
-    background-color: grey;
+.navBarUl li,
+.navBarUl a {
+    position: relative;
 }
 
 .menuDesplegable {
-    border: 1px solid violet;
+    font-size: 20px;
     display: none;
     position: absolute;
     width: 200px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(222, 229, 238);
+    opacity: 0;
+    transition: 1s;
+}
+
+a:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #000;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+}
+
+a:hover:after {
+    width: 100%;
+    left: 0;
 }
 
 .navBarUl li:hover .menuDesplegable {
+    opacity: 1;
     display: block;
-}
-
-.menuDesplegable li:hover {
-    background-color: black;
+    color: black;
 }
 
 .active {
@@ -70,4 +90,22 @@ a {
 
 #texto {
     resize: vertical;
+}
+
+.galeriaGrid {
+    position: relative;
+    z-index: -10;
+    margin: 20px;
+    display: grid;
+    height: auto;
+    position: relative;
+    top: 70px;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-flow: dense;
+    grid-auto-rows: 200px;
+}
+
+.contactoDiv {
+    display: flex;
 }
